@@ -1,3 +1,9 @@
+2007-08-09  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/Account.cs: more work to support authorization and rescinding
+	* Banter/ProviderUserManager.cs: new method to delete a provider user
+	  with the volatile contact handle
+
 2007-08-08  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter.mdp, Banter/NotifyButton.cs, Banter/Makefile.am: Added
